# rpm-guide-greetlib

./: CMakeLists.txt  README.md
doc/: usage.txt
examples/: demo.c
include/: greetlib.h
src/: greetlib.c
